customer-ms.yml
# APP DEPLOYMENT
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: customer-ms
  name: customer-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      run: customer-ms
  template:
    metadata:
      labels:
        run: customer-ms
    spec:
      containers:
      - args:
        - npm
        - start
        image: lonneke/customer-ms:1.0.2
        name: customer-ms
        ports:
        - containerPort: 8080
      restartPolicy: Always

---

# APP SERVICE

apiVersion: v1
kind: Service
metadata:
  labels:
    app: customer-ms
  name: customer-ms
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: customer-ms
  type: LoadBalancer
