ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-customer-ing
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/add-base-url: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /$KUBERNETES_NAMESPACE/api
        backend:
          serviceName: customer-ms
          servicePort: 8080
